--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,15 @@
 .hidden {
     display: none
 }
+
+ul{
+    list-style-type: none;
+    padding: 0px 10px 20px 10px;
+
+}
+a {
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    margin-bottom: 5px;
+}
