--- a/frontend/src/components/AllSpots/AllSpots.css
+++ b/frontend/src/components/AllSpots/AllSpots.css
@@ -18,7 +18,10 @@ img{
     display: flex;
     justify-content: center;
 }
-
+.stars{
+    display:flex;
+    justify-content: right;
+}
 
 .tooltip-wrap {
     display: inline-block;
