--- a/frontend/src/components/SpotForm/SpotForm.css
+++ b/frontend/src/components/SpotForm/SpotForm.css
@@ -1,15 +1,36 @@
-form{
+.form{
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+    max-width: 600px;
+    margin-left: 90px;
 }
-input{
+.formContainer{
     display: flex;
-    max-width: fit-content;
-    margin: 10px;
+    justify-content: center;
 }
-label{
+.input{
+    display: flex;
+    width: 550px;
+    margin: 15px 0px
+
+}
+.label{
     display:flex;
+    width:550px;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
+}
+#createSpot{
+    width:fit-content;
+
+}
+.btnContainer{
+    display: flex;
+    justify-content: center;
+    margin: 15px 0px;
+}
+.bottomBorders{
+    padding-bottom: 20px;
+    border-bottom: 3px solid black;
 }
